@@ -4,6 +4,8 @@ lbdb (0.37) unstable; urgency=low
   * Fix query shell functions to catch non-zero exit status in case they
     get invoked in set -e context.  Thanks to martin f. krafft
     <madduck@debian.org> for providing a patch (Closes: #515076).
+  * m_evolution: support line breaks and long lines.  Thanks to Jan Larres
+    <jan@majutsushi.net> for providing a patch (Closes: #505540).
 
  --
 
